<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/dialog"
    android:layout_marginTop="@dimen/dialog"
    android:layout_marginLeft="@dimen/dialog"
    android:layout_marginRight="@dimen/dialog">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_margin="@dimen/fab_margin"
            android:textSize="@dimen/fab_margin"
            android:textAlignment="center"
            android:textStyle="bold"
            android:text="@string/textKonfirmasi"/>

        <ImageView
            android:id="@+id/output_seed_motif"
            android:layout_width="300dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:src="@mipmap/logo_ditenun" />


        <EditText
            android:id="@+id/editNamaMotif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/textEditNamaMotif"/>
        <Button
            android:id="@+id/btnSelanjutnya"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/camera"
            android:text="@string/textBtnSelanjutnya"
            android:layout_marginRight="@dimen/fab_margin"
            android:layout_marginLeft="@dimen/fab_margin"/>

        <Button
            android:id="@+id/btnBatal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/camera"
            android:text="@string/textBtnBatal"
            android:layout_marginRight="@dimen/fab_margin"
            android:layout_marginLeft="@dimen/fab_margin"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>