<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:theme="@style/ActionBarTheme"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4"
            android:padding="5dp"
            android:layout_marginBottom="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginTop="?android:actionBarSize">

            <TextView
                android:id="@+id/stock_image_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorText"
                android:gravity="center"
                android:text="@string/stock_image"
                android:textColor="@color/black_text"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/motif_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorText"
                android:gravity="center"
                android:text="@string/motif"
                android:textColor="@color/black_text"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/kristik_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorText"
                android:gravity="center"
                android:text="@string/kristik"
                android:textColor="@color/black_text"
                android:textSize="18dp" />


            <TextView
                android:id="@+id/hasil_desain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorText"
                android:gravity="center"
                android:textSize="18dp"
                android:textColor="@color/black_text"
                android:text="@string/ulos"/>

        </LinearLayout>

        <include layout="@layout/layout_image_grid" />
        <include layout="@layout/fragment_disimpan"/>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
